--- a/package.json
+++ b/package.json
@@ -6,25 +6,67 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "biome lint ./app",
+    "lint:fix": "biome lint ./app --write",
+    "check": "biome check ./app",
+    "check:fix": "biome check ./app --write",
+    "format": "biome format ./app --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run app/shared/api/db/seed.ts",
+    "deps": "taze minor",
+    "knip": "knip",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
-    "isbot": "^5.1.31",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-router": "7.10.1"
+    "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-sql": "~2.3.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-seed": "^0.3.1",
+    "isbot": "^5.1.32",
+    "lucide-react": "^0.556.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router": "7.10.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.10",
+    "@chromatic-com/storybook": "^4.1.3",
     "@react-router/dev": "7.10.1",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^22",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-onboarding": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/react-vite": "^10.1.10",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@vitest/browser-playwright": "4.0.16",
+    "@vitest/coverage-v8": "4.0.16",
+    "drizzle-kit": "0.31.8",
+    "knip": "^5.77.0",
+    "playwright": "^1.57.0",
+    "storybook": "^10.1.10",
+    "storybook-addon-remix-react-router": "^6.0.0",
+    "tailwindcss": "^4.1.18",
+    "taze": "19.9.2",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.16"
   }
 }
